# viberpg

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
data/: items.json  monsters.json  npcs.json  quests.json  resources.json  world.json
docs/: audio.md  game-design.md  index.md  protocol.md  technical-design.md
public/: game.js  index.html  styles.css
public/assets/: AUDIO_README.md
public/assets/music/: calm_spheric_loop.mid
scripts/: generate-midi.py
src/: main.rs
